Add 1.18.2 support