@@ -6,7 +6,6 @@ import net.minecraftforge.common.ForgeConfigSpec;
 import net.minecraftforge.common.ForgeConfigSpec.Builder;
 import net.minecraftforge.common.ForgeConfigSpec.ConfigValue;
 
-import java.util.Collections;
 import java.util.List;
 
 @OnlyIn( Dist.CLIENT )
@@ -17,13 +16,13 @@ final class HKBModConfig
 	
 	static
 	{
-		final Builder builder = new Builder();
+		final var builder = new Builder();
 		HIDE_KEY_BINDINGS = (
 			builder.comment(
 				"Key bindings listed here will be hidden from the key bindings menu.",
 				"Use this to hide key bindings that are not used by the player."
 			)
-			.defineList( "hide_key_bindings", Collections.emptyList(), String.class::isInstance )
+			.defineList( "hide_key_bindings", List.of(), String.class::isInstance )
 		);
 		CONFIG_SPEC = builder.build();
 	}
